--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "3.2.19", features = ["derive"] }
+reqwest = "0.11.11"
+tokio = { version = "1.21.0", features = ["full"] }
