--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,10 @@ edition = "2021"
 clap = { version = "3.2.19", features = ["derive"] }
 reqwest = "0.11.11"
 tokio = { version = "1.21.0", features = ["full"] }
+
+
+[profile.release]
+strip = true
+panic = 'abort'
+codegen-units = 1
+lto = true
