--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,94 +1,56 @@
 name: release
+
+permissions:
+  contents: write
+
 on:
   push:
-    tags: ['v*']
+    tags:
+      - v[0-9]+.*
 
 jobs:
-  publish:
-    name: Publish for ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
+  create-release:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: taiki-e/create-gh-release-action@v1
+        with:
+          # (optional) Path to changelog.
+          changelog: CHANGELOG.md
+        env:
+          # (required) GitHub token for creating GitHub Releases.
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  upload-assets:
     strategy:
       matrix:
         include:
-          - os: ubuntu-latest
-            artifact_name: servust
-            asset_name: servust-linux-amd64
-          - os: macos-latest
-            artifact_name: servust
-            asset_name: servust-macos-amd64
-          - os: windows-latest
-            artifact_name: servust.exe
-            asset_name: servust-windows-amd64.exe
-
+          - target: aarch64-unknown-linux-gnu
+            os: ubuntu-latest
+          - target: aarch64-apple-darwin
+            os: macos-latest
+          - target: x86_64-unknown-linux-gnu
+            os: ubuntu-latest
+          - target: x86_64-apple-darwin
+            os: macos-latest
+          - target: x86_64-pc-windows-msvc
+            os: windows-latest
+    runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v2
-      - uses: extractions/setup-just@v1
+      - uses: actions/checkout@v3
+      - name: Install cross-compilation tools
+        uses: taiki-e/setup-cross-toolchain-action@v1
+        with:
+          target: ${{ matrix.target }}
+        if: startsWith(matrix.os, 'ubuntu')
+      - uses: taiki-e/upload-rust-binary-action@v1
+        with:
+          # (required) Comma-separated list of binary names (non-extension portion of filename) to build and upload.
+          # Note that glob pattern is not supported yet.
+          bin: servust
+          # (optional) Target triple, default is host triple.
+          target: ${{ matrix.target }}
+
         env:
+          # (required) GitHub token for uploading assets to GitHub Releases.
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Install LLVM Tools
-        run: rustup component add llvm-tools-preview
-
-      - name: Build
-        shell: bash
-        run: |
-          if [ "${{ matrix.os }}" = "windows-latest" ]; then
-            # Windows MSVC does not yet support PGO
-            # https://github.com/rust-lang/rust/issues/61002
-            cargo build --release --locked
-          else
-            just build
-          fi
-      - name: Build archive
-        shell: bash
-        run: |
-          staging="${{matrix.asset_name}}-src"
-          mkdir -p "$staging"
-          cp {README.md,UNLICENSE,LICENSE-MIT} "$staging/"
-          cp {build.rs,Cargo.toml,Cargo.lock} "$staging/"
-          cp justfile "$staging/"
-          cp -R ./src "./$staging/src"
-          if [ "${{ matrix.os }}" = "windows-latest" ]; then
-            7z a "${staging}.zip" "$staging"
-            echo "ASSET=${staging}.zip" >> $GITHUB_ENV
-          else
-            mkdir -p "${staging}/pgo-data"
-            cp ./pgo-data/merged.profdata "./${staging}/pgo-data/merged.profdata"
-            tar czf "${staging}.tar.gz" "${staging}"
-            echo "ASSET=${staging}.tar.gz" >> $GITHUB_ENV
-          fi
-      - name: Create deb artifact
-        shell: bash
-        run: |
-          if [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
-            cargo install cargo-deb
-            RUSTFLAGS="-Cllvm-args=-pgo-warn-missing-function -Cprofile-use=$(pwd)/pgo-data/merged.profdata" cargo deb
-            deb_path=$(find ./target/debian/ -type f -name 'servust*')
-            asset_path="${{ matrix.asset_name }}.deb"
-            mv "${deb_path}" "${asset_path}"
-            echo "DEB=${asset_path}" >> $GITHUB_ENV
-          fi
-      - name: Upload deb package
-        uses: svenstaro/upload-release-action@v2
-        if: matrix.os == 'ubuntu-latest'
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ${{ env.DEB }}
-          asset_name: ${{ env.DEB }}
-          tag: ${{ github.ref }}
-
-      - name: Upload src and pgo data to release
-        uses: svenstaro/upload-release-action@v2
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ${{ env.ASSET }}
-          asset_name: ${{ env.ASSET }}
-          tag: ${{ github.ref }}
-
-      - name: Upload binaries to release
-        uses: svenstaro/upload-release-action@v2
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: target/release/${{ matrix.artifact_name }}
-          asset_name: ${{ matrix.asset_name }}
-          tag: ${{ github.ref }}
