--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,24 +19,40 @@ jobs:
             artifact_name: servust
             asset_name: servust-linux-amd64
             target: x86_64-unknown-linux-gnu
+            install_dependencies: |
+              sudo apt-get update
+              sudo apt-get install -y libssl-dev
           - os: macos-latest
             artifact_name: servust
             asset_name: servust-apple-amd64
             target: x86_64-apple-darwin
+            install_dependencies: |
+              brew install openssl
+              export OPENSSL_ROOT_DIR=/usr/local/opt/openssl
           - os: windows-latest
             artifact_name: servust.exe
             asset_name: servust-windows-amd64.exe
             target: x86_64-pc-windows-msvc
+            install_dependencies: |
+              choco install openssl.light
+              echo "::add-path::C:\Program Files\OpenSSL-Win64\bin"
           - os: ubuntu-latest
             artifact_name: servust
             asset_name: servust-linux-armv7
             target: armv7-unknown-linux-gnueabihf
+            install_dependencies: |
+              sudo apt-get update
+              sudo apt-get install -y libssl-dev
           - os: macos-latest
             artifact_name: servust
             asset_name: servust-apple-arm64
             target: aarch64-apple-darwin
+            install_dependencies: |
+              brew install openssl
+              export OPENSSL_ROOT_DIR=/usr/local/opt/openssl
     steps:
       - uses: actions/checkout@v2
+      - run: ${{ matrix.install_dependencies }}
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
