--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,21 +36,21 @@ jobs:
             target: x86_64-pc-windows-msvc
             install_dependencies: |
               choco install openssl
-          - os: ubuntu-latest
-            artifact_name: servust
-            asset_name: servust-linux-armv7
-            target: armv7-unknown-linux-gnueabihf
-            install_dependencies: |
-              sudo apt-get update
-              sudo apt-get install -y libssl-dev
-              export OPENSSL_DIR=/usr
-          - os: macos-latest
-            artifact_name: servust
-            asset_name: servust-apple-arm64
-            target: aarch64-apple-darwin
-            install_dependencies: |
-              brew install openssl
-              export OPENSSL_ROOT_DIR=/usr/local/opt/openssl
+          # - os: ubuntu-latest
+          #   artifact_name: servust
+          #   asset_name: servust-linux-armv7
+          #   target: armv7-unknown-linux-gnueabihf
+          #   install_dependencies: |
+          #     sudo apt-get update
+          #     sudo apt-get install -y libssl-dev
+          #     export OPENSSL_DIR=/usr
+          # - os: macos-latest
+          #   artifact_name: servust
+          #   asset_name: servust-apple-arm64
+          #   target: aarch64-apple-darwin
+          #   install_dependencies: |
+          #     brew install openssl
+          #     export OPENSSL_ROOT_DIR=/usr/local/opt/openssl
     steps:
       - uses: actions/checkout@v2
       - run: ${{ matrix.install_dependencies }}
@@ -61,7 +61,8 @@ jobs:
           override: true
       - uses: actions-rs/cargo@v1
         with:
-          use-cross: true
+          # use-cross: true
+          use-cross: false
           command: build
           args: --release --target ${{ matrix.target }}
       - name: Upload binary to release
