--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
               brew install openssl
               export OPENSSL_ROOT_DIR=/usr/local/opt/openssl
           - os: windows-latest
-            artifact_name: servust.exe
+            artifact_name: D:\a\servust\servust
             asset_name: servust-windows-amd64.exe
             target: x86_64-pc-windows-msvc
             install_dependencies: |
