ci/cd changes part 14/infinity

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,18 +67,21 @@ jobs:
       #     args: --release --target ${{ matrix.target }}
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Build project
-        run: cargo build --release --target ${{ matrix.target }} --locked
+      - name: Build and release
+      #   run: cargo build --release --target ${{ matrix.target }} --locked
 
-      - name: Upload binary to release
-        # uses: svenstaro/upload-release-action@v1-release
-        # with:
-        #   repo_token: ${{ secrets.GITHUB_TOKEN }}
-        #   file: ${{ matrix.artifact_name }}
-        #   asset_name: ${{ matrix.asset_name }}
-        #   tag: ${{ github.ref }}
-        uses: Shopify/upload-to-release@v1.0.1
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          path: ${{ matrix.artifact_name }}
-          name: ${{ matrix.asset_name }}
+      # - name: Upload binary to release
+      #   uses: svenstaro/upload-release-action@v1-release
+      #   with:
+      #     repo_token: ${{ secrets.GITHUB_TOKEN }}
+      #     file: ${{ matrix.artifact_name }}
+      #     asset_name: ${{ matrix.asset_name }}
+      #     tag: ${{ github.ref }}
+      uses: rust-build/rust-build.action@v1.3.2
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        # Output target
+        RUSTTARGET: ${{ matrix.target }}
+        # UPLOAD_MODE: # optional
+
