--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,17 +70,19 @@ jobs:
       - name: Build
         run: cargo build --release --target ${{ matrix.target }} --locked
 
-      # - name: Upload binary to release
-      #   uses: svenstaro/upload-release-action@v1-release
-      #   with:
-      #     repo_token: ${{ secrets.GITHUB_TOKEN }}
-      #     file: ${{ matrix.artifact_name }}
-      #     asset_name: ${{ matrix.asset_name }}
-      #     tag: ${{ github.ref }}
-      - name: Release
-        uses: softprops/action-gh-release@v1
+      - name: Upload binary to release
+        uses: svenstaro/upload-release-action@v1-release
         with:
-          files: ${{ matrix.artifact_name }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: ${{ matrix.artifact_name }}
+          asset_name: ${{ matrix.asset_name }}
+          tag: ${{ github.ref }}
           prerelease: true
-          token: ${{ secrets.GITHUB_TOKEN }}
-          body_path: CHANGELOG.md
+          
+      # - name: Release
+      #   uses: softprops/action-gh-release@v1
+      #   with:
+      #     files: ${{ matrix.artifact_name }}
+      #     prerelease: true
+      #     token: ${{ secrets.GITHUB_TOKEN }}
+      #     body_path: CHANGELOG.md
