--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,33 +52,25 @@ jobs:
           #     brew install openssl
           #     export OPENSSL_ROOT_DIR=/usr/local/opt/openssl
     steps:
-      # - uses: actions/checkout@v2
-      # - run: ${{ matrix.install_dependencies }}
-      # - uses: actions-rs/toolchain@v1
-      #   with:
-      #     toolchain: stable
-      #     target: ${{ matrix.target }}
-      #     override: true
-      # - uses: actions-rs/cargo@v1
-      #   with:
-      #     # use-cross: true
-      #     use-cross: false
-      #     command: build
-      #     args: --release --target ${{ matrix.target }}
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Build
         run: cargo build --release --target ${{ matrix.target }} --locked
 
+      - uses: actions/upload-artifact@v3
+        with:
+          name: ${{ matrix.asset_name }}
+          path: ${{ matrix.artifact_name }}
+
       - name: Upload binary to release
         uses: svenstaro/upload-release-action@v1-release
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          repo_token: ${{ github.token }}
           file: ${{ matrix.artifact_name }}
           asset_name: ${{ matrix.asset_name }}
           tag: ${{ github.ref }}
           prerelease: true
-          
+
       # - name: Release
       #   uses: softprops/action-gh-release@v1
       #   with:
