--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,3 +86,4 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           bodyFile: CHANGELOG.md
           prerelease: true
+          allowUpdates: true
