ci/cd changes part 23/infinity

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,14 +62,14 @@ jobs:
           name: ${{ matrix.asset_name }}
           path: ${{ matrix.artifact_name }}
 
-      # - name: Upload binary to release
-      #   uses: svenstaro/upload-release-action@v1-release
-      #   with:
-      #     repo_token: ${{ github.token }}
-      #     file: ${{ matrix.artifact_name }}
-      #     asset_name: ${{ matrix.asset_name }}
-      #     tag: ${{ github.ref }}
-      #     prerelease: true
+      - name: Upload binary to release
+        uses: svenstaro/upload-release-action@v1-release
+        with:
+          repo_token: ${{ github.token }}
+          file: ${{ matrix.artifact_name }}
+          asset_name: ${{ matrix.asset_name }}
+          tag: ${{ github.ref }}
+          prerelease: true
 
       # - name: Release
       #   uses: softprops/action-gh-release@v1
@@ -79,11 +79,11 @@ jobs:
       #     token: ${{ secrets.GITHUB_TOKEN }}
       #     body_path: CHANGELOG.md
 
-      - name: Release
-        uses: ncipollo/release-action@v1
-        with:
-          artifacts: ${{ matrix.artifact_name }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-          bodyFile: CHANGELOG.md
-          prerelease: true
-          allowUpdates: true
+      # - name: Release
+      #   uses: ncipollo/release-action@v1
+      #   with:
+      #     artifacts: ${{ matrix.artifact_name }}
+      #     token: ${{ secrets.GITHUB_TOKEN }}
+      #     bodyFile: CHANGELOG.md
+      #     prerelease: true
+      #     allowUpdates: true
