--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,3 +69,4 @@ jobs:
           file: ${{ matrix.artifact_name }}
           asset_name: ${{ matrix.asset_name }}
           tag: ${{ github.ref }}
+          body: "Check out the [CHANGELOG](https://raw.githubusercontent.com/giripriyadarshan/servust/main/CHANGELOG.md)"
