--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "servust"
-version = "0.2.0"
+version = "0.2.1"
 edition = "2021"
 authors = ["Priyadarshan Giri <giripriyadarshan@gmail.com>"]
 readme = "README.md"
 license = "MIT"
 repository = "https://github.com/giripriyadarshan/servust"
 homepage = "https://github.com/giripriyadarshan/servust"
-description = "Rust Backend-server template generator"
+description = "Rust multiple backend-server template generator"
 keywords = ["server", "database", "orm", "template", "boilerplate"]
 categories = ["command-line-interface","command-line-utilities", "development-tools"]
 exclude = ["target/**",".gitignore",".github/**","LICENSE-MIT",".idea/**"]
@@ -15,11 +15,11 @@ exclude = ["target/**",".gitignore",".github/**","LICENSE-MIT",".idea/**"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "3.2.19", features = ["derive"] }
+clap = { version = "4.0.8", features = ["derive"] }
 console = "0.15.2"
 indicatif = "0.17.1"
-reqwest = "0.11.11"
-tokio = { version = "1.21.0", features = ["full"] }
+reqwest = "0.11.12"
+tokio = { version = "1.21.2", features = ["full"] }
 
 [[bin]]
 name = "servust"
