--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "servust"
-version = "0.2.3"
+version = "0.2.4"
 edition = "2021"
 authors = ["Priyadarshan Giri <giripriyadarshan@gmail.com>"]
 readme = "README.md"
@@ -15,7 +15,7 @@ exclude = ["target/**",".gitignore",".github/**","LICENSE-MIT",".idea/**"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.0.8", features = ["derive"] }
+clap = { version = "4.0.12", features = ["derive"] }
 console = "0.15.2"
 indicatif = "0.17.1"
 reqwest = "0.11.12"
@@ -31,3 +31,9 @@ strip = true
 panic = 'abort'
 codegen-units = 1
 lto = true
+
+
+[package.metadata.bundle]
+name = "Servust"
+identifier = "io.github.giripriyadarshan.servust"
+# icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
